gates formatting sweep, new VAL, fixed video title on hover wrap issue, reintroduced 'You are here', room modal logic perfected

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -40,7 +40,8 @@ button
 	#cur-video-name
 		margin-top: 2px
 		display: block
-		text-indent: 4px
+		width: 586px;
+		margin-left: 4px;
 	#time-container
 		margin-right: 4px
 		display: block
@@ -900,8 +901,6 @@ button.playlist, button.playlist.active, button.search, button.search.active
 							margin-bottom: 4px
 						.listed-room-name
 							font-size: 16px
-							 span
-								display: none
 						.listed-video-name
 							font-size: 14px
 						.true-room-name
@@ -1435,8 +1434,47 @@ div#top-video-name
 	z-index: 30
 
 #avatarWrapper_VAL
-	position:absolute;
+	position:absolute
+	margin-left: 376px
+	margin-top: 10px
 
+#val_body
+	position: absolute
+	margin-top: 10px
+	margin-left: -30px
+	
+#val_l_brow
+	position: absolute
+	margin-top: 27px
+	margin-left: -2px
+#val_r_brow
+	position: absolute
+	margin-top: 27px
+	margin-left: 24px
+#val_l_pupil
+	position: absolute;
+	margin-top: 47px;
+#val_r_pupil
+	position: absolute;
+	margin-top: 47px;
+	margin-left: 23px
+#val_smile
+	position: absolute;
+	margin-top: 58px;
+	margin-left: 7px;
+#valtipsy
+	margin-top: 32px;
+	position: absolute;
+	margin-left: -20px;
+	z-index: 2; 
+	width: 70px; 
+	height: 40px;
+#avatarChat_VAL
+	margin-top: 26px;
+	margin-left: 20px;
+	position: absolute;
+	
+	
 #tvglowimg
 	margin-top: 114px
 	margin-left: 120px
